--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,49 @@
 {
-    "name": "infisical/cli-tool",
-    "description": "Cross-platform PHP CLI for Infisical integration",
+    "name": "mojo/cli",
+    "description": "Cross-platform PHP CLI for Mojo secrets management with bash automation compatibility",
     "type": "library",
     "license": "MIT",
+    "keywords": ["mojo", "secrets", "cli", "automation", "devops"],
+    "authors": [
+        {
+            "name": "Zain Zulfiqar",
+            "email": "zain@mojosolo.com"
+        }
+    ],
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "ext-curl": "*",
+        "ext-json": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
-            "Infisical\\CliTool\\": "src/"
+            "Mojo\\CliTool\\": "src/"
         }
     },
-    "bin": ["bin/mytool"]
+    "bin": ["bin/mojocli"],
+    "scripts": {
+        "test": "phpunit",
+        "lint": "php -l src/App.php",
+        "install-global": "composer global require mojo/cli"
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "sort-packages": true
+    },
+    "extra": {
+        "automation-compatibility": {
+            "bash-scripts": [
+                "init.sh -> mojocli init",
+                "startup.sh -> mojocli startup",
+                "update-env.sh -> mojocli push-secrets"
+            ],
+            "config-formats": [
+                "infisical.json (bash compatible)",
+                ".infisical.json (php native)"
+            ]
+        }
+    }
 }
